--- a/AcquaSense React/package.json
+++ b/AcquaSense React/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "babel-preset-react-app": "^10.0.1",
     "chart.js": "^4.4.5",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
