--- a/AcquaSenseMobile/package.json
+++ b/AcquaSenseMobile/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "AsyncStorage": "^0.1.5",
     "expo": "~52.0.37",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
