--- a/AcquaSenseMobile/package.json
+++ b/AcquaSenseMobile/package.json
@@ -29,7 +29,8 @@
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "cypress": "^14.2.1"
   },
   "private": true
 }
