--- a/AcquaSenseMobile/package.json
+++ b/AcquaSenseMobile/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "AsyncStorage": "^0.1.5",
+    "axios": "^1.8.4",
     "expo": "~52.0.37",
     "expo-linear-gradient": "~14.0.2",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "js-cookie": "^3.0.5",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
