Criando o APK do projeto, teste

--- a/AcquaSenseMobile/app.json
+++ b/AcquaSenseMobile/app.json
@@ -19,13 +19,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.lcasferrei.AcquaSenseMobile"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "8280e1dd-ea97-4504-8e67-6715a3fe9611"
+      }
+    }
   }
 }
