--- a/AcquaSenseMobile/app.json
+++ b/AcquaSenseMobile/app.json
@@ -4,7 +4,7 @@
     "slug": "AcquaSenseMobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/LogoAcquaSense.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -17,13 +17,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/LogoAcquaSense.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.lcasferrei.AcquaSenseMobile"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/LogoAcquaSense.png"
     },
     "plugins": [
       "expo-secure-store"
