--- a/AcquaSenseMobile/package.json
+++ b/AcquaSenseMobile/package.json
@@ -30,7 +30,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "expo-notifications": "~0.29.14"
+    "expo-notifications": "~0.29.14",
+    "react-native-gesture-handler": "~2.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
