--- a/AcquaSenseMobile/package.json
+++ b/AcquaSenseMobile/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.0",
@@ -19,19 +20,19 @@
     "axios": "^1.8.4",
     "expo": "~52.0.37",
     "expo-linear-gradient": "~14.0.2",
-    "expo-secure-store": "~14.0.1",
+    "expo-notifications": "~0.29.14",
+    "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.0.1",
     "js-cookie": "^3.0.5",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "expo-notifications": "~0.29.14",
-    "react-native-gesture-handler": "~2.20.2"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
