--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,5 @@ python-decouple>=3.8,<4.0
 
 # (Recomendado) PostgreSQL se você usa no Render
 psycopg[binary]>=3.1.0,<4.0
+
+djangorestframework-simplejwt>=5.3.1,<6.0
