--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,5 @@ python-decouple>=3.8,<4.0
 psycopg[binary]>=3.1.0,<4.0
 
 djangorestframework-simplejwt>=5.3.1,<6.0
+
+django-cors-headers>=4.3.1,<5.0
