--- a/AcquaSenseMobile/package.json
+++ b/AcquaSenseMobile/package.json
@@ -21,7 +21,7 @@
     "expo": "~52.0.37",
     "expo-linear-gradient": "~14.0.2",
     "expo-notifications": "~0.29.14",
-    "expo-secure-store": "^14.2.3",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "js-cookie": "^3.0.5",
     "react": "18.3.1",
