--- a/AcquaSenseMobile/app.json
+++ b/AcquaSenseMobile/app.json
@@ -32,6 +32,7 @@
       "eas": {
         "projectId": "8280e1dd-ea97-4504-8e67-6715a3fe9611"
       }
-    }
+    },
+    "owner": "acquasense"
   }
 }
