--- a/AcquaSenseMobile/package.json
+++ b/AcquaSenseMobile/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,9 +16,9 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "AsyncStorage": "^0.1.5",
     "axios": "^1.8.4",
     "expo": "~52.0.37",
+    "expo-dev-client": "~5.0.20",
     "expo-linear-gradient": "~14.0.2",
     "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.1",
@@ -28,15 +28,18 @@
     "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.12.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "cypress": "^14.2.1"
+    "@react-native-community/cli": "latest",
+    "cypress": "^14.2.1",
+    "expo-module-scripts": "^4.1.7"
   },
   "private": true
 }
